--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ MONGODB_URI=mongodb://localhost:27017/gamedata
 PORT=3000
 
 # Optional: Add your actual MongoDB URI if using cloud service
-MONGODB_URI=mongodb+srv://vercel-admin-user-68a627938124ba5dd95e3fd2:0wS2r7XeLbwW4hP7@cluster01.9k95qys.mongodb.net/gamedata
+MONGODB_URI=mongodb+srv://vercel-admin-user-68aa3c3e1b63e343cd3b64ee:BzXJpSgRrdnwrWgS@cluster01.9k95qys.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
