--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,25 @@
       "src": "/(.*)",
       "dest": "/SysLvLUp/Alarm/$1"
     }
+  ],
+  "headers": [
+    {
+      "source": "/manifest.json",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/manifest+json"
+        }
+      ]
+    },
+    {
+      "source": "/sw.js",
+      "headers": [
+        {
+          "key": "Service-Worker-Allowed",
+          "value": "/"
+        }
+      ]
+    }
   ]
 }
