--- a/manifest.json
+++ b/manifest.json
@@ -10,19 +10,5 @@
   "theme_color": "#4a90e2",
   "categories": ["productivity", "lifestyle", "games"],
   "lang": "en",
-  "dir": "ltr",
-  "icons": [
-    {
-      "src": "icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ]
+  "dir": "ltr"
 }
